mvp for Loading..

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,6 @@
     <title>SSR</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root"><main><div>Loading App...</div></main></div>
 </body>
 </html>
