--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,6 +4,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSR</title>
     <link rel="icon" href="{{FAVICON_PATH}}" type="image/x-icon">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #7c4141; /* Light gray background for a clean look */
+            color: #333; /* Dark gray text for readability */
+        }
+        h1 {
+            color: #2c3e50; /* A nice dark blue for the heading */
+            font-size: 2em;
+            margin: 0.67em 0;
+        }
+        a {
+            color: #3498db; /* Bright blue for links */
+            text-decoration: none;
+            display: block; /* Each link on a new line */
+            margin: 0.5em 0; /* Add some margin for spacing */
+        }
+        a:hover {
+            text-decoration: underline; /* Underline links on hover for clarity */
+        }
+    </style>
+    <link rel="stylesheet" href="{{STYLE_CSS_PATH}}">
 </head>
 <body>
     <div id="root"><main><div>Loading App...</div></main></div>
