fix static client.js path

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <div id="root"><main><div>Loading App...</div></main></div>
+    <script src="{{SCRIPT_PATH}}"></script>
 </body>
 </html>
