rm {{SCRIPT_PATH}} from html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"><main><div>Loading App...</div></main></div>
-    <script src="{{SCRIPT_PATH}}"></script>
+    <!-- <script src="{{SCRIPT_PATH}}"></script> -->
 </body>
 </html>
