working with / basepath

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,8 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSR</title>
-    <link rel="icon" href="{{FAVICON_PATH}}" type="image/x-icon">
-    <link rel="stylesheet" href="{{STYLE_CSS_PATH}}">
+    <link rel="icon" href="/public/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/public/assets/styles/styles.scss">
 </head>
 <body>
     <div id="root"><main><div>Loading App...</div></main></div>
